# ImageConveterTest

./: CMakeLists.txt  Dockerfile  README.md
includes/: BMPImageConverter.h  ImageConverter.h  PNGImageConverter.h
src/: BMPImageConverter.cpp  PNGImageConverter.cpp  main.cpp
